--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "scripts": {
         "test": "node .\\node_modules\\mocha\\bin\\mocha.js"
     },
-    "dependencies": {
+    "devDependencies": {
         "mocha": "^10.2.0",
         "sinon": "^17.0.1"
     }
